--- a/codecov.yml
+++ b/codecov.yml
@@ -10,9 +10,11 @@ coverage:
       qmongjs:
         paths:
           - packages/qmongjs
+        threshold: 5%
       skde:
         paths:
           - apps/skde
+        threshold: 5%
     patch:
       default:
         target: auto
