--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-i18n": "4.15.0",
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/strapi": "4.15.0",
-    "better-sqlite3": "8.6.0"
+    "better-sqlite3": "8.6.0",
+    "semver": "^7.5.4"
   },
   "author": {
     "name": "A Strapi developer"
