--- a/apps/strapi/Dockerfile
+++ b/apps/strapi/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:18-alpine as build
+# hadolint ignore=DL3018
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
 ENV NODE_ENV=production
 
@@ -13,6 +14,7 @@ RUN yarn build
 
 # Creating final production image
 FROM node:18-alpine
+# hadolint ignore=DL3018
 RUN apk add --no-cache vips-dev
 ENV NODE_ENV=production
 WORKDIR /opt/
