--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: "18.x"
           cache: "yarn"
+          corepack-enable: true
       - run: yarn install
       - run: yarn run check-types
       - run: yarn run check-format
