--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "yarn"
+          corepack-enable: true
       - run: yarn install
       - run: yarn run check-types
       - run: yarn run check-format
