--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -2,7 +2,7 @@
   "name": "strapi",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Strapi CMS for SKDE",
   "scripts": {
     "dev": "strapi develop",
     "develop": "strapi develop",
@@ -11,14 +11,20 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.15.0",
-    "@strapi/plugin-users-permissions": "4.15.0",
-    "@strapi/strapi": "4.15.0",
-    "better-sqlite3": "8.6.0",
-    "semver": "^7.5.4"
+    "@codemirror/view": "^6.21.4",
+    "@strapi/plugin-i18n": "^4.15.1",
+    "@strapi/plugin-users-permissions": "^4.15.1",
+    "@strapi/strapi": "^4.15.1",
+    "better-sqlite3": "^8.6.0",
+    "mysql": "^2.18.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.0.0",
+    "semver": "^7.5.4",
+    "styled-components": "^5.0.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "SKDE"
   },
   "strapi": {
     "uuid": "b2485670-dac3-469c-94d0-b4a6d75a4d57"
