--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: "20.x"
           cache: "yarn"
-      - run: yarn install
+      - run: corepack enable && yarn install
       - run: yarn run check-types
       - run: yarn run check-format
       - name: Test build
