--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -42,6 +42,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           NEXT_PUBLIC_API_HOST: https://prod-mong-api.skde.org
+          NEXT_PUBLIC_ENV: prod
         run: |
           yarn run export
           aws s3 sync apps/skde/out s3://skde.org \
@@ -52,6 +53,7 @@ jobs:
         if: github.ref == 'refs/heads/develop'
         env:
           NEXT_PUBLIC_API_HOST: https://qa-mong-api.skde.org
+          NEXT_PUBLIC_ENV: qa
         run: |
           yarn run export
           aws s3 sync apps/skde/out s3://qa.skde.org \
@@ -62,6 +64,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           NEXT_PUBLIC_API_HOST: https://verify-mong-api.skde.org
+          NEXT_PUBLIC_ENV: verify
         run: |
           yarn run export
           aws s3 sync apps/skde/out s3://verify.skde.org \
