--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy app to AWS
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, dev_env]
     paths-ignore:
       - "apps/api/**"
   pull_request:
@@ -50,7 +50,7 @@ jobs:
             --delete \
             --cache-control "public, max-age=1, s-maxage=1"
       - name: Build and sync develop to S3 bucket qa.skde.org
-        if: github.ref == 'refs/heads/develop'
+        if: github.ref == 'refs/heads/dev_env'
         env:
           NEXT_PUBLIC_API_HOST: https://qa-mong-api.skde.org
           NEXT_PUBLIC_ENV: qa
