--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -31,6 +31,8 @@
     "@tanstack/react-query-devtools": "4.36.1",
     "@visx/axis": "3.4.1",
     "@visx/group": "3.3.0",
+    "@visx/marker": "3.5.0",
+    "@visx/mock-data": "3.3.0",
     "@visx/scale": "3.3.0",
     "@visx/xychart": "3.4.1",
     "d3-array": "3.2.4",
