--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -45,6 +45,7 @@
     "decap-cms-core": "3.2.8",
     "gray-matter": "4.0.3",
     "iframe-resizer-react": "1.1.0",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "next-query-params": "4.3.0",
     "qmongjs": "*",
