--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "semver": "^7.5.4",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "lodash": "latest"
   },
   "author": {
     "name": "SKDE"
