Lagt til style-komponent

--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -55,6 +55,7 @@
     "rehype-slug": "5.1.0",
     "rehype-toc": "3.0.2",
     "remark-gfm": "3.0.1",
+    "styled-components": "^6.1.1",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
