litt mer corepack enable.
Noen github action noder bruker yarn 1.22.21, som gir en feil. Se issue https://www.github.com/actions/setup-node/issues/899

--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4.1.1
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.0
         with:
