--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -16,13 +16,13 @@
     "@strapi/plugin-users-permissions": "alpha",
     "@strapi/strapi": "alpha",
     "better-sqlite3": "^8.6.0",
+    "lodash": "latest",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "semver": "^7.5.4",
-    "styled-components": "^5.2.1",
-    "lodash": "latest"
+    "styled-components": "^5.2.1"
   },
   "author": {
     "name": "SKDE"
