--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -11,7 +11,7 @@
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn prettier --write",
     "test": "yarn run test:base --coverage",
-    "test:base": "react-scripts test --watchAll=false",
+    "test:base": "vitest",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test start http://localhost:3000 cypress",
@@ -66,6 +66,8 @@
     "@types/d3-time-format": "4.0.3",
     "@types/node": "20.10.3",
     "@types/react": "18.2.41",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.1",
     "cypress": "13.6.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.3",
@@ -75,24 +77,8 @@
     "react-markdown": "8.0.7",
     "react-scripts": "5.0.1",
     "start-server-and-test": "2.0.3",
-    "typescript": "5.3.2"
+    "typescript": "5.3.2",
+    "vitest": "^1.0.1"
   },
-  "packageManager": "yarn@4.0.2",
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "statements": 3,
-        "branches": 4,
-        "functions": 1,
-        "lines": 3
-      }
-    },
-    "transformIgnorePatterns": [
-      "<rootDir>/../../node_modules/remark-gfm/"
-    ],
-    "moduleNameMapper": {
-      "d3": "<rootDir>/../../node_modules/d3/dist/d3.min.js",
-      "react-markdown": "<rootDir>/../../node_modules/react-markdown/react-markdown.min.js"
-    }
-  }
+  "packageManager": "yarn@4.0.2"
 }
