--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,6 +42,7 @@ jobs:
           working-directory: ./apps/skde
           build: yarn export
           start: yarn start-server
+          browser: chrome
       - name: Archive production artifacts
         if: failure()
         uses: actions/upload-artifact@v3.1.3
