--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -5,7 +5,7 @@
   "types": "./src/index.tsx",
   "scripts": {
     "test": "yarn run test:base --coverage",
-    "test:base": "react-scripts test --watchAll=false",
+    "test:base": "vitest",
     "lint": "eslint --ignore-path .gitignore --ext js,ts,tsx src",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn run prettier --write",
@@ -22,6 +22,8 @@
     "@types/react-select": "5.0.1",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.0.2",
     "eslint": "8.55.0",
     "next-query-params": "5.0.0",
     "next-router-mock": "0.9.10",
@@ -31,7 +33,8 @@
     "react-scripts": "5.0.1",
     "remark-gfm": "3.0.1",
     "types": "*",
-    "typescript": "5.3.2"
+    "typescript": "5.3.2",
+    "vitest": "^1.0.2"
   },
   "dependencies": {
     "@emotion/react": "11.11.1",
