--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -8,7 +8,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "test": "jest"
   },
   "dependencies": {
     "@codemirror/view": "^6.21.4",
@@ -23,6 +24,12 @@
     "react-router-dom": "^5.2.0",
     "semver": "^7.5.4",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.5",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   },
   "author": {
     "name": "SKDE"
