Prøve med cypress-testing av komponenter

--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "yarn run test:base --coverage",
     "test:base": "react-scripts test --watchAll=false",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run --component --spec src/components/IndicatorTable/indexIndicatorTable.cy.tsx",
     "lint": "eslint --ignore-path .gitignore --ext js,ts,tsx src",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn run prettier --write",
@@ -22,6 +24,7 @@
     "@types/react-select": "5.0.1",
     "@typescript-eslint/eslint-plugin": "6.13.1",
     "@typescript-eslint/parser": "6.13.1",
+    "cypress": "13.6.1",
     "eslint": "8.55.0",
     "next-query-params": "5.0.0",
     "next-router-mock": "0.9.10",
@@ -44,6 +47,7 @@
     "d3": "7.8.5",
     "d3-format": "3.1.0",
     "next": "14.0.3",
+    "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-icons": "4.12.0",
     "react-select": "5.8.0",
