--- a/packages/qmongjs/tsconfig.json
+++ b/packages/qmongjs/tsconfig.json
@@ -18,6 +18,6 @@
     "incremental": true
   },
   "baseUrl": ".",
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.cy.tsx"],
   "include": ["src"]
 }
