vs-debug configurations + very rudimentary app-folder structure

--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -14,8 +14,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["./cypress.config.ts", "node_modules", "**/*.test.tsx"]
 }
