--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -34,6 +34,7 @@
     "remark-gfm": "3.0.1",
     "types": "*",
     "typescript": "5.3.3",
+    "vite": "^5.0.10",
     "vitest": "^1.0.2"
   },
   "dependencies": {
