--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
+  "type": "module",
   "scripts": {
     "test": "yarn run test:base run --coverage",
     "test:base": "vitest",
