Eksplisitt versjonering av pakker
Noen nylige innlagte pakker var lagt inn med ^x.y.z

--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -23,8 +23,8 @@
     "@types/react-select": "5.0.1",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.0.2",
+    "@vitejs/plugin-react": "4.2.1",
+    "@vitest/coverage-v8": "1.1.1",
     "eslint": "8.56.0",
     "next-query-params": "5.0.0",
     "next-router-mock": "0.9.11",
@@ -35,8 +35,8 @@
     "remark-gfm": "4.0.0",
     "types": "*",
     "typescript": "5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.0.2"
+    "vite": "5.0.10",
+    "vitest": "1.1.1"
   },
   "dependencies": {
     "@emotion/react": "11.11.3",
