Endret navneending på vitest.config fra ts til mts
For å fjerne advarsel under kjøring av test:

 The CJS build of Vite's Node API is deprecated. See https://vitejs.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.

Endring gjelder både for qmongjs og skde. For skde-pakken fjernes også "type": "module" fra package.json, som var en annen måte å løse problemet på.

--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -16,11 +16,10 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "vitest.config.mts"],
   "exclude": [
     "./cypress.config.ts",
     "node_modules",
     "**/*.test.tsx",
-    "vitest.config.ts"
   ]
 }
