--- a/packages/qmongjs/tsconfig.json
+++ b/packages/qmongjs/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "incremental": true
   },
-  "exclude": ["node_modules", "vitest.config.mts"],
+  "exclude": ["node_modules", "vitest.config.mts", "**/*.test.ts*",],
   "include": ["src"]
 }
