--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -20,6 +20,9 @@
     "check-types": "tsc --noEmit",
     "start-server": "npx serve out/"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
@@ -55,8 +58,8 @@
     "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
     "rehype-toc": "3.0.2",
-    "styled-components": "^6.1.1",
     "remark-gfm": "4.0.0",
+    "styled-components": "^6.1.1",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
