--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -60,7 +60,8 @@
     "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
     "styled-components": "^6.1.1",
-    "use-query-params": "2.2.1"
+    "use-query-params": "2.2.1",
+    "vi": "^1.0.0"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.12.18",
