--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -60,8 +60,7 @@
     "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
     "styled-components": "^6.1.1",
-    "use-query-params": "2.2.1",
-    "vi": "^1.0.0"
+    "use-query-params": "2.2.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.12.18",
@@ -86,7 +85,7 @@
     "react-scripts": "5.0.1",
     "start-server-and-test": "2.0.3",
     "typescript": "5.3.3",
-    "vitest": "1.2.1"
+    "vitest": "^1.2.1"
   },
   "packageManager": "yarn@4.0.2"
 }
