--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -20,9 +20,6 @@
     "check-types": "tsc --noEmit",
     "start-server": "npx serve out/"
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
   "dependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
@@ -48,7 +45,7 @@
     "decap-cms-core": "3.2.8",
     "gray-matter": "4.0.3",
     "iframe-resizer-react": "1.1.0",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "next": "14.1.0",
     "next-query-params": "5.0.0",
     "qmongjs": "*",
@@ -59,7 +56,7 @@
     "rehype-slug": "6.0.0",
     "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
-    "styled-components": "^6.1.1",
+    "styled-components": "^6.1.8",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
