--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@codemirror/view": "^6.21.4",
-    "@strapi/plugin-i18n": "alpha",
-    "@strapi/plugin-users-permissions": "alpha",
-    "@strapi/strapi": "alpha",
+    "@strapi/plugin-i18n": "4.19.0",
+    "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/strapi": "4.19.0",
     "better-sqlite3": "^8.6.0",
     "lodash": "latest",
     "mysql": "^2.18.1",
