--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -31,7 +31,7 @@
     "@tanstack/react-query-devtools": "5.17.21",
     "@visx/axis": "3.5.0",
     "@visx/group": "3.3.0",
-    "@visx/legend": "^3.5.0",
+    "@visx/legend": "3.5.0",
     "@visx/marker": "3.5.0",
     "@visx/scale": "3.5.0",
     "@visx/xychart": "3.5.1",
@@ -56,7 +56,7 @@
     "rehype-slug": "6.0.0",
     "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "6.1.8",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
@@ -82,7 +82,7 @@
     "react-scripts": "5.0.1",
     "start-server-and-test": "2.0.3",
     "typescript": "5.3.3",
-    "vitest": "^1.2.1"
+    "vitest": "1.2.1"
   },
   "packageManager": "yarn@4.0.2"
 }
