--- a/apps/strapi/.eslintrc
+++ b/apps/strapi/.eslintrc
@@ -1,6 +1,27 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
+  "parser": "babel-eslint",
+  "extends": "eslint:recommended",
+  "env": {
+    "commonjs": true,
+    "es6": true,
+    "node": true,
+    "browser": false
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "jsx": false
+    },
+    "sourceType": "module"
+  },
+  "globals": {
+    "strapi": true
+  },
   "rules": {
-    "@next/next/no-img-element": "off"
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "linebreak-style": ["error", "unix"],
+    "no-console": 0,
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"]
   }
 }
