--- a/apps/strapi/.gitignore
+++ b/apps/strapi/.gitignore
@@ -105,10 +105,10 @@ coverage
 # Strapi
 ############################
 
+.env
 license.txt
 exports
-*.cache
+.strapi
 dist
 build
 .strapi-updater.json
-.turbo
