--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -2,28 +2,13 @@
   "name": "strapi",
   "private": true,
   "version": "0.1.0",
-  "description": "Strapi CMS for SKDE",
+  "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@codemirror/view": "^6.21.4",
-    "@strapi/plugin-i18n": "4.19.0",
-    "@strapi/plugin-users-permissions": "4.19.0",
-    "@strapi/strapi": "4.19.0",
-    "better-sqlite3": "^8.6.0",
-    "lodash": "latest",
-    "mysql": "^2.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
-    "semver": "^7.5.4",
-    "styled-components": "^5.2.1"
+    "strapi": "strapi"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.5",
@@ -31,11 +16,26 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
   },
+  "dependencies": {
+    "@codemirror/view": "^6.21.4",
+    "@strapi/plugin-cloud": "4.19.0",
+    "@strapi/plugin-i18n": "4.19.0",
+    "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/strapi": "4.19.0",
+    "better-sqlite3": "8.6.0",
+    "lodash": "latest",
+    "mysql": "^2.18.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "semver": "^7.5.4",
+    "styled-components": "5.3.3"
+  },
   "author": {
     "name": "SKDE"
   },
   "strapi": {
-    "uuid": "b2485670-dac3-469c-94d0-b4a6d75a4d57"
+    "uuid": "2a376fd7-587d-4867-bf0f-5e094b73fc6b"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
