--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "husky": "9.0.10",
     "lint-staged": "15.2.1",
     "turbo": "1.12.2"
+  },
+  "dependencies": {
+    "vitest": "^1.2.2"
   }
 }
