--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   "devDependencies": {
     "husky": "9.0.10",
     "lint-staged": "15.2.1",
-    "turbo": "1.12.2"
-  },
-  "dependencies": {
-    "vitest": "^1.2.2"
+    "turbo": "1.12.2", 
+    "vitest": "1.2.2"
   }
 }
