--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mongts",
   "packageManager": "yarn@4.1.0",
   "scripts": {
-    "postinstall": "husky install",
     "build": "turbo run build",
     "export": "turbo run export",
     "start": "turbo run start",
@@ -12,7 +11,8 @@
     "format": "turbo run format",
     "check-types": "turbo run check-types",
     "check-format": "turbo run check-format",
-    "cms": "npx decap-server"
+    "cms": "npx decap-server",
+    "prepare": "husky"
   },
   "workspaces": [
     "apps/*",
