--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -41,6 +41,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.15.10",
     "@mui/material": "5.15.10",
+    "@mui/x-tree-view": "^6.17.0",
     "@tanstack/react-query": "5.20.5",
     "@visx/event": "3.3.0",
     "@visx/tooltip": "3.3.0",
