--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -25,10 +25,11 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.2.2",
     "eslint": "8.56.0",
+    "jsdom": "^24.0.0",
     "next-query-params": "5.0.0",
     "next-router-mock": "0.9.12",
     "prettier": "3.2.5",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "9.0.1",
     "react-scripts": "5.0.1",
     "remark-gfm": "4.0.0",
@@ -49,6 +50,7 @@
     "d3-format": "3.1.0",
     "next": "14.1.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "5.0.1",
     "react-select": "5.8.0",
     "resize-observer-polyfill": "1.5.1",
