--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -25,7 +25,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.2.2",
     "eslint": "8.56.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "24.0.0",
     "next-query-params": "5.0.0",
     "next-router-mock": "0.9.12",
     "prettier": "3.2.5",
@@ -41,7 +41,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.15.10",
     "@mui/material": "5.15.10",
-    "@mui/x-tree-view": "^6.17.0",
+    "@mui/x-tree-view": "6.17.0",
     "@tanstack/react-query": "5.20.5",
     "@visx/event": "3.3.0",
     "@visx/tooltip": "3.3.0",
