--- a/apps/strapi/.env
+++ b/apps/strapi/.env
@@ -1,14 +1,14 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS=pqEJwKUwPgad6ubvlaiC1Q==,KelkO/lRX5CMmrvmGCeckQ==,Ccb9v/TjjsTF7kw/5X2uLQ==,rQKaOB6UG2ZtW3FrWqdGLA==
-API_TOKEN_SALT=dxErS62PRlfi+j02MgNEoQ==
-ADMIN_JWT_SECRET=7L0f4lIbaGXwNKA4y+BgZA==
-TRANSFER_TOKEN_SALT=e7AYqey7Ly1Ksg4thoyrVQ==
+APP_KEYS=###
+API_TOKEN_SALT=###
+ADMIN_JWT_SECRET=###
+TRANSFER_TOKEN_SALT=###
 
 # Database
 #DATABASE_CLIENT=sqlite
 #DATABASE_FILENAME=.tmp/data.db
-#JWT_SECRET=nLvTsfCzaCLVMILQ/SF7Lw==
+#JWT_SECRET=####
 
 #NODE_ENV=production
 NODE_ENV=development
@@ -19,8 +19,8 @@ DATABASE_CLIENT=mysql
 DATABASE_PORT=3306
 DATABASE_NAME=strapidb
 DATABASE_USERNAME=strapi
-DATABASE_PASSWORD=abcABC123!
-MYSQL_ROOT_PASSWORD=Hemmelig123
-MYSQL_PASSWORD=abcABC123!
+DATABASE_PASSWORD=#####
+MYSQL_ROOT_PASSWORD=########
+MYSQL_PASSWORD=#####
 MYSQL_DATABASE=strapidb
-JWT_SECRET=S3QPGHsbp1hYnyj3hau2ug==
+JWT_SECRET=####
