--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -10,37 +10,29 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {
-    "@babel/preset-env": "^7.23.5",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.1"
-  },
   "dependencies": {
-    "@codemirror/view": "^6.21.4",
-    "@strapi/plugin-cloud": "4.19.0",
-    "@strapi/plugin-i18n": "4.19.0",
-    "@strapi/plugin-users-permissions": "4.19.0",
-    "@strapi/strapi": "4.19.0",
+    "@strapi/plugin-cloud": "4.20.3",
+    "@strapi/plugin-i18n": "4.20.3",
+    "@strapi/plugin-users-permissions": "4.20.3",
+    "@strapi/strapi": "4.20.3",
     "better-sqlite3": "8.6.0",
-    "lodash": "latest",
-    "mysql": "^2.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
-    "semver": "^7.5.4",
     "styled-components": "5.3.3"
   },
   "author": {
-    "name": "SKDE"
+    "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "2a376fd7-587d-4867-bf0f-5e094b73fc6b"
+    "uuid": "5d6fe3ff-7849-42d6-8ad5-56145afa1ee1"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^3.2.5"
+  }
 }
