--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -11,19 +11,15 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/design-system": "^1.6.3",
-    "@strapi/helper-plugin": "^4.6.0",
-    "@strapi/icons": "^1.6.3",
+    "@strapi/plugin-cloud": "4.20.3",
     "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-users-permissions": "4.20.3",
     "@strapi/strapi": "4.20.3",
     "better-sqlite3": "8.6.0",
-    "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "styled-components": "5.3.6"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "styled-components": "5.3.3"
   },
   "author": {
     "name": "A Strapi developer"
@@ -37,7 +33,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/react-is": "^18",
     "prettier": "^3.2.5"
   }
 }
