Oppdater dependencies i strapi-app
Var en del utdaterte versjoner der

--- a/apps/strapi/package.json
+++ b/apps/strapi/package.json
@@ -11,11 +11,11 @@
     "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-users-permissions": "4.20.3",
     "@strapi/strapi": "4.20.3",
-    "better-sqlite3": "8.6.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "5.3.4",
-    "styled-components": "5.3.3"
+    "better-sqlite3": "9.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.2",
+    "styled-components": "6.1.8"
   },
   "author": {
     "name": "A Strapi developer"
@@ -29,6 +29,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "prettier": "3.2.5"
   }
 }
