--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "lint-staged": "15.2.2",
     "prettier": "3.2.5",
     "turbo": "1.12.4"
+  },
+  "dependencies": {
+    "@visx/heatmap": "^3.3.0"
   }
 }
