--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           yarn run export
       - name: Find dead links
-        run: scripts/atlas/checklinks.py apps/skde/out/kontakt/ apps/skde/out/ https://www.skde.no/
+        run: exit scripts/atlas/checklinks.py apps/skde/out/kontakt/ apps/skde/out/ https://www.skde.no/
