--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           yarn run export
       - name: Find dead links
-        run: scripts/atlas/checklinks.py apps/skde/out/helseatlas/v2/kronikere apps/skde/out/ https://www.skde.no/
+        run: scripts/atlas/checklinks.py apps/skde/out/ apps/skde/out/ https://www.skde.no/
