--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4.1.1
+        with:
+          ref: main
       - name: Enable Corepack before setting up Node
         run: corepack enable
       - name: Set up Node.js
