--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -31,6 +31,7 @@ jobs:
         run: scripts/atlas/checklinks.py apps/skde/out/ apps/skde/out/ https://www.skde.no/
       - name: Send email
         uses: dawidd6/action-send-mail@v3
+        if: failure()
         with:
           server_address: smtp.gmail.com
           server_port: 465
