--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -23,7 +23,7 @@ jobs:
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
           subject: Døde lenker på skde.no
-          body: |
-            Det finnes lenker på skde.no som ikke lenger lever. Se https://github.com/mong/mongts/actions/workflows/dead_links.yml for mer informasjon.
+          html_body: |
+            Det finnes lenker på skde.no som ikke lenger lever. Se <a href="https://github.com/mong/mongts/actions/workflows/dead_links.yml">github</a>  for mer informasjon.
           to: arnfinn.hykkerud.steindal@helse-nord.no
           from: "Github actions"
