--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -14,8 +14,24 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           ref: main
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version: "20.x"
+          cache: "yarn"
+      - run: corepack enable && yarn install
+      - name: Build page
+        env:
+          NEXT_PUBLIC_API_HOST: https://prod-mong-api.skde.org
+        run: |
+          yarn run export
+      - name: Find dead links
+        run: scripts/atlas/checklinks.py apps/skde/out/ apps/skde/out/ https://www.skde.no/
       - name: Send email
         uses: dawidd6/action-send-mail@v3
+        if: failure()
         with:
           server_address: smtp.gmail.com
           server_port: 465
