--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -39,5 +39,5 @@ jobs:
           subject: Døde lenker på skde.no
           html_body: |
             Det finnes lenker på skde.no som ikke lenger lever. Se <a href="https://github.com/mong/mongts/actions/workflows/dead_links.yml">github</a>  for mer informasjon.
-          to: arnfinn.hykkerud.steindal@helse-nord.no
+          to: ${{ vars.DEADLINKS_EMAIL_LIST }} # This variable is defined on github repo page at settings/variables/actions
           from: "Github actions"
