--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node-dev -r dotenv/config src",
     "dev": "yarn run start",
     "build": "tsc",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts src",
+    "lint": "eslint --ignore-pattern .gitignore",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn run prettier --write",
     "check-format": "yarn run prettier --check",
@@ -40,7 +40,8 @@
     "prettier": "3.2.5",
     "ts-node-dev": "2.0.0",
     "types": "*",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.7.1"
   },
   "packageManager": "yarn@4.1.1"
 }
