--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "yarn run test:base run --coverage",
     "test:base": "vitest",
-    "lint": "eslint --ignore-path .gitignore --ext js,ts,tsx src",
+    "lint": "eslint --ignore-pattern .gitignore src",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn run prettier --write",
     "check-format": "yarn run prettier --check",
