Slå på lint på skde-app. Fikset lint-errors

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node-dev -r dotenv/config src",
     "dev": "yarn run start",
     "build": "tsc",
-    "lint": "eslint --ignore-pattern .gitignore",
+    "lint": "eslint src",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn run prettier --write",
     "check-format": "yarn run prettier --check",
