--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,7 @@ jobs:
       - run: corepack enable && yarn install
       - run: yarn run check-types
       - run: yarn run check-format
+      - run: yarn lint
       - run: yarn run test
       - name: Code coverage
         if: matrix.node-version == '20.x'
