Fiks og oppdater eslint (#2415)
Oppdatert eslint fra versjon 8 til 9, som bruker en global konfigurasjonsfil for alle pakkene.

Aktivert eslint-kjøring på skde-app og types-pakke.

Fikset diverse lint-feil

Reaktiverte noen tester (ga lint-feil siden container ikke ble brukt når test var slått av)

Kjører lint på github actions

--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build",
+    "lint": "eslint src pages",
     "prettier": "prettier \"**/*.+(js|jsx|ts|tsx|json|html|yml|yaml|css|md)\"",
     "format": "yarn prettier --write",
     "test": "yarn run test:base run --coverage",
@@ -71,7 +72,7 @@
     "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-v8": "1.6.0",
     "cypress": "13.8.1",
-    "eslint": "8.57.0",
+    "eslint": "9.1.1",
     "eslint-config-next": "14.2.3",
     "husky": "9.0.11",
     "next-router-mock": "0.9.13",
