--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,8 +5,12 @@
   "types": "./src/index",
   "packageManager": "yarn@4.2.1",
   "private": true,
+  "scripts": {
+    "lint": "eslint src"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0"
+    "@typescript-eslint/parser": "7.8.0",
+    "eslint": "9.1.1"
   }
 }
