--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -55,6 +55,7 @@
     "rehype-slug": "6.0.0",
     "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
+    "sharp": "0.33.3",
     "styled-components": "6.1.9",
     "use-query-params": "2.2.1"
   },
