--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -42,6 +42,7 @@
     "@mui/x-tree-view": "6.17.0",
     "@tanstack/react-query": "5.35.1",
     "@visx/event": "3.3.0",
+    "@visx/heatmap": "^3.3.0",
     "@visx/tooltip": "3.3.0",
     "d3": "7.9.0",
     "d3-format": "3.1.0",
