--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -13,6 +13,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "6.4.5",
     "@testing-library/react": "16.0.0",
     "@testing-library/user-event": "14.5.2",
