inkluder noe autogenerert konfigurasjon fra nextjs
Ble plutselig plaget med at nextjs la inn dette hver gang jeg kjørte yarn dev eller lignende.

Tror det samme skjedde i #1728

--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -14,12 +14,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "vitest.config.mts"],
-  "exclude": [
-    "./cypress.config.ts",
-    "node_modules",
-    "**/*.test.tsx",
-  ]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "vitest.config.mts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": ["./cypress.config.ts", "node_modules", "**/*.test.tsx"]
 }
