--- a/apps/skde/tsconfig.json
+++ b/apps/skde/tsconfig.json
@@ -20,7 +20,7 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
