GH action: Bygging og kjøring av docker image
Må ha en test på at docker image faktisk ikke krasjer.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,6 +62,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Test docker image
+        run: |
+          docker build -t test --file apps/api/Dockerfile ./apps/api
+          docker run -e ORIGIN="skde.no" test
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v5.4.0
         with:
