--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Test docker image
         run: |
           docker build -t test --file apps/api/Dockerfile ./apps/api
-          docker run -e ORIGIN="skde.no" test
+          docker run -e ORIGIN="skde.no" -d test
+          docker kill $(docker ps --filter ancestor=test -q)
       - name: Build and push to Docker Hub
         uses: docker/build-push-action@v5.4.0
         with:
