--- a/.github/workflows/dead_links.yml
+++ b/.github/workflows/dead_links.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           yarn run export
       - name: Find dead links
-        run: scripts/atlas/checklinks.py apps/skde/out/ apps/skde/out/ https://www.skde.no/
+        run: scripts/atlas/checklinks.py apps/skde/out/ apps/skde/out/ https://apps.skde.no/
       - name: Send email
         uses: dawidd6/action-send-mail@v3
         if: failure()
