Lagt inn alle manglende lib

--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -38,10 +38,18 @@
     "@mui/material": "5.15.20",
     "@mui/x-tree-view": "7.7.1",
     "@tanstack/react-query": "5.45.1",
+    "@visx/axis": "3.10.1",
+    "@visx/curve": "3.3.0",
     "@visx/event": "3.3.0",
+    "@visx/grid": "3.5.0",
+    "@visx/group": "3.3.0",
     "@visx/heatmap": "^3.3.0",
     "@visx/legend": "^3.10.3",
+    "@visx/responsive": "3.10.2",
+    "@visx/scale": "3.5.0",
+    "@visx/shape": "3.5.0",
     "@visx/tooltip": "3.3.0",
+    "@visx/vendor": "3.5.0",
     "d3": "7.9.0",
     "d3-format": "3.1.0",
     "next": "14.2.4",
