--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,7 +33,9 @@
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/simple-oauth2": "5.0.7",
+    "dotenv": "16.4.5",
     "eslint": "9.5.0",
+    "express-serve-static-core": "0.1.1",
     "prettier": "3.3.2",
     "ts-node-dev": "2.0.0",
     "types": "*",
