--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@iframe-resizer/react": "5.1.3",
+    "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "5.15.20",
     "@mui/material": "5.15.20",
     "@sentry/browser": "8.11.0",
@@ -31,7 +32,9 @@
     "@tanstack/react-query-devtools": "5.45.1",
     "@visx/axis": "3.10.1",
     "@visx/group": "3.3.0",
+    "@visx/responsive": "3.10.2",
     "@visx/scale": "3.5.0",
+    "@visx/text": "3.3.0",
     "@visx/xychart": "3.11.0",
     "d3-array": "3.2.4",
     "d3-geo": "3.1.1",
@@ -52,6 +55,7 @@
     "rehype-slug": "6.0.0",
     "remark-gfm": "4.0.0",
     "sharp": "0.33.4",
+    "types": "*",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
@@ -69,9 +73,11 @@
     "cypress": "13.12.0",
     "eslint": "9.5.0",
     "husky": "9.0.11",
+    "jsdom": "24.1.0",
     "next-router-mock": "0.9.13",
     "prettier": "3.3.2",
     "react-markdown": "9.0.1",
+    "serve": "14.2.3",
     "start-server-and-test": "2.0.4",
     "typescript": "5.4.5",
     "vitest": "1.6.0"
