--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   ],
   "devDependencies": {
     "@types/node": "20.14.9",
+    "decap-server": "3.0.4",
+    "eslint": "9.5.0",
     "husky": "9.0.11",
     "knip": "5.23.0",
     "lint-staged": "15.2.7",
