--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,19 +29,16 @@
     "typescript": "5.4.5"
   },
   "devDependencies": {
-    "@types/apicache": "1.6.6",
     "@types/compression": "1.7.5",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/simple-oauth2": "5.0.7",
-    "@typescript-eslint/eslint-plugin": "7.14.1",
-    "@typescript-eslint/parser": "7.14.1",
+    "dotenv": "16.4.5",
     "eslint": "9.5.0",
     "prettier": "3.3.2",
     "ts-node-dev": "2.0.0",
     "types": "*",
-    "typescript": "5.4.5",
-    "typescript-eslint": "7.14.1"
+    "typescript": "5.4.5"
   },
   "packageManager": "yarn@4.3.1"
 }
