--- a/apps/skde/package.json
+++ b/apps/skde/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@iframe-resizer/react": "5.1.3",
+    "@mui/base": "5.0.0-beta.40",
     "@mui/icons-material": "5.15.20",
     "@mui/material": "5.15.20",
     "@sentry/browser": "8.11.0",
@@ -31,12 +32,11 @@
     "@tanstack/react-query-devtools": "5.45.1",
     "@visx/axis": "3.10.1",
     "@visx/group": "3.3.0",
-    "@visx/legend": "3.10.3",
-    "@visx/marker": "3.5.0",
+    "@visx/responsive": "3.10.2",
     "@visx/scale": "3.5.0",
+    "@visx/text": "3.3.0",
     "@visx/xychart": "3.11.0",
     "d3-array": "3.2.4",
-    "d3-format": "3.1.0",
     "d3-geo": "3.1.1",
     "d3-scale": "4.0.2",
     "d3-shape": "3.2.0",
@@ -53,17 +53,15 @@
     "react-spring": "9.7.3",
     "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
-    "rehype-toc": "3.0.2",
     "remark-gfm": "4.0.0",
     "sharp": "0.33.4",
-    "styled-components": "6.1.11",
+    "types": "*",
     "use-query-params": "2.2.1"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.12.39",
     "@testing-library/react": "16.0.0",
     "@types/d3-array": "3.2.1",
-    "@types/d3-format": "3.0.4",
     "@types/d3-geo": "3.1.0",
     "@types/d3-scale": "4.0.8",
     "@types/d3-shape": "3.1.6",
@@ -74,12 +72,12 @@
     "@vitest/coverage-v8": "1.6.0",
     "cypress": "13.12.0",
     "eslint": "9.5.0",
-    "eslint-config-next": "14.2.4",
     "husky": "9.0.11",
+    "jsdom": "24.1.0",
     "next-router-mock": "0.9.13",
     "prettier": "3.3.2",
     "react-markdown": "9.0.1",
-    "react-scripts": "5.0.1",
+    "serve": "14.2.3",
     "start-server-and-test": "2.0.4",
     "typescript": "5.4.5",
     "vitest": "1.6.0"
