Miljøvariabel som brukes av api lagt inn in turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,8 @@
       "dependsOn": ["build"]
     },
     "dev": {
-      "cache": false
+      "cache": false,
+      "env": ["DB_PORT"]
     }
   }
 }
