Oppdatere til turbo v2 (#2628)
Miljøvariabel som brukes av api lagt inn i turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {
+  "tasks": {
     "build": {
       "dependsOn": ["^build"]
     },
@@ -18,7 +18,8 @@
       "dependsOn": ["build"]
     },
     "dev": {
-      "cache": false
+      "cache": false,
+      "env": ["DB_PORT"]
     }
   }
 }
