hent inn alle node_modules

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -4,7 +4,7 @@ FROM base AS builder
 
 WORKDIR /app
 
-RUN corepack enable && yarn global add turbo@^2
+RUN yarn global add turbo@^2
 
 COPY . .
 
@@ -13,20 +13,24 @@ RUN turbo prune api --docker
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
 WORKDIR /app
- 
+
+# yarn > 1
+RUN corepack enable
+
 # First install the dependencies (as they change less often)
 COPY --from=builder /app/out/json/ .
-RUN corepack enable && yarn install
+RUN yarn install
  
 # Build the project
 COPY --from=builder /app/out/full/ .
-RUN corepack enable && yarn turbo run build
+RUN yarn turbo run build --filter=api...
 
 FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
 COPY --from=installer /app/apps/api/build ./build
+COPY --from=installer /app/node_modules ./node_modules
 EXPOSE 80
 ARG version="none"
 ENV PORT=80
