updated missing lodash in qmongjs package.json, also fixed main page redirect a little

--- a/packages/qmongjs/package.json
+++ b/packages/qmongjs/package.json
@@ -58,6 +58,7 @@
     "react-icons": "5.2.1",
     "react-select": "5.8.0",
     "resize-observer-polyfill": "1.5.1",
-    "use-query-params": "2.2.1"
+    "use-query-params": "2.2.1",
+    "lodash": "4.17.21"
   }
 }
